--- a/testproject/templates/testapp/forms.html
+++ b/testproject/templates/testapp/forms.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title>
@@ -27,10 +28,10 @@
         <hr>
 
 
-<!--        {% for row in excel_data %}-->
-<!--            {% for cell in row %}-->
-<!--                {{ cell }}&nbsp;&nbsp;-->
-<!--                {{cell.value}}&nbsp;&nbsp;-->
-<!--                 {%endfor %}-->
-<!--            <br>-->
-<!--        {% endfor %}-->
+        {% for row in excel_data %}
+            {% for cell in row %}
+                {{ cell }}&nbsp;&nbsp;
+                {{cell.value}}&nbsp;&nbsp;
+                 {%endfor %}
+            <br>
+        {% endfor %}
