--- a/testproject/templates/pdf/details.html
+++ b/testproject/templates/pdf/details.html
@@ -4,26 +4,32 @@
 </head>
 <body>
 
-{% if report %}
+<!--{% if report %}-->
+<!--<table>-->
+<!--    <thead>-->
+<!--        <th>name</th>-->
+<!--        <th> marks</th>-->
+
+<!--    </thead>-->
+<!--    {% for key, value in my_dict.items %}-->
+<!--       <tr>-->
+<!--           <td> {{key}} {{value}}</td>-->
+
+
+<!--       </tr>-->
+<!--    {% endfor %}-->
+<!--</table>-->
+<!--{% endif %}-->
+
 <table>
-    <thead>
+    {% for key, value in data %}
+    <tr>
+        <td> {{ key }} - {{value}}</td>
 
-       <th>NAME</th>
-       <th>PHONE</th>
-       <th>ADDRESS</th>
-    </thead>
-    {% for r in report%}
-       <tr>
-           <td> {{r.name}}</td>
-           <td> {{r.phone}}</td>
-           <td> {{r.address}}</td>
+    </tr>
+{% endfor %}
 
-       </tr>
-    {% endfor %}
 </table>
-{% endif %}
-
-
 
 
 </body>
